--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -38,7 +38,11 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  font:(
+    base: #f4f4f4,
+    contrast:#222
+  )
 );
 
 
